You can now have several webhooks per rule

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 # No space should be before and after the equal sign in your .env.
 
+# https://developer.twitter.com/en/portal/dashboard
+# Fill out your information and accept the developer agreement & policy
+# Create an app and copy your bearer token
+# I will remove every rule that the bearer token has access to so you
+# should probably create a new app for this bot.
+BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAAMGcQEAAAAA2Xh6%2Bjxw4NM7xetr2C9trBdsNUo%3DIyQF6ddixAnAtuAUq7NRKUVcGJsJ8IlriICvVWqCWFK2SfhRY
+
 # https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks
 # Right click channel in Discord -> Intergrations -> Webhooks -> Create Webhook
 # RULE goes to WEBHOOK_URL
@@ -8,20 +15,14 @@
 # You can have 5 rules if you Essential API access.
 # You can have 25 rules if you Elevated API access.
 # You can have 1024 rules if you Academic Research API access.
+# Seperate URLs with a comma to send rule to several webhooks. Example: WEBHOOK_URL=https://discord.com/api/webhooks/123,https://discord.com/api/webhooks/456
 WEBHOOK_URL=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
-# WEBHOOK_URL2=""
-# WEBHOOK_URL3=""
-# WEBHOOK_URL4=""
-# WEBHOOK_URL5=""
+# WEBHOOK_URL2=
+# WEBHOOK_URL3=
+# WEBHOOK_URL4=
+# WEBHOOK_URL5=
 
-# https://developer.twitter.com/en/portal/dashboard
-# Fill out your information and accept the developer agreement & policy
-# Create an app and copy your bearer token
-# I will remove every rule that the bearer token has access to so you
-# should probably create a new app for this bot.
-BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAAMGcQEAAAAA2Xh6%2Bjxw4NM7xetr2C9trBdsNUo%3DIyQF6ddixAnAtuAUq7NRKUVcGJsJ8IlriICvVWqCWFK2SfhRY
-
-# Our rule for the filtered stream.
+# Our rules for the filtered stream.
 # https://developer.twitter.com/en/docs/twitter-api/tweets/filtered-stream/integrate/build-a-rule
 #
 # Rule can be 512 characters long.
@@ -30,7 +31,7 @@ BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAAMGcQEAAAAA2Xh6%2Bjxw4NM7xetr2C9trBdsNUo%3DIyQ
 # RULE2 goes to WEBHOOK_URL2
 # RULE3 goes to WEBHOOK_URL3 and so on
 # You can have 5 rules if you Essential API access.
-# You can have 25 rules if you Elevated API access.
+# You can have 25 rules if you Elevated API access. (You can request this from Twitter in the developer portal)
 # You can have 1024 rules if you Academic Research API access.
 RULE="(from:Steam OR from:Xbox OR from:PlayStation) -is:retweet -is:reply -is:quote"
 # RULE2=""
@@ -47,6 +48,7 @@ LOG_LEVEL=INFO
 
 # Where https://github.com/TheLovinator1/twitter-image-collage-maker is running.
 # You can run your self-hosted version or use the default https://twitter.lovinator.space/add
+# Please don't abuse the default one. I don't want 50 000+ pictures of underage anime girls on my server.
 TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 
 # You can customize the webhook by uncommenting these:
