--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ python = "^3.9"
 requests = "^2.28.1"
 python-dotenv = "^1.0.0"
 beautifulsoup4 = "^4.11.1"
-tweepy = "^4.12.1"
 discord-webhook = "^1.0.0"
+tweepy = {extras = ["async"], version = "^4.13.0"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
