--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,9 +4,9 @@ on:
   schedule:
     - cron: "20 6 * * *"
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
   workflow_dispatch:
 env:
   BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
@@ -17,11 +17,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       - run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
-          cache: 'poetry'
+          python-version: "3.11"
+          cache: "poetry"
       - run: poetry install
       - run: poetry run pytest
       - uses: docker/login-action@v2
@@ -40,6 +42,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          platforms: linux/amd64,linux/arm64,linux/arm32v5,linux/arm32v6,linux/arm32v7,arm64v8,i386,mips64le,ppc64le,s390x
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
