--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+        platforms: all
       - run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
@@ -42,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/arm32v5,linux/arm32v6,linux/arm32v7,arm64v8,i386,mips64le,ppc64le,s390x
+          platforms: linux/amd64,linux/arm64,linux/386,linux/mips64le,linux/mips64,linux/s390x,linux/arm/v7,linux/arm/v6
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
