Fix broken syntax

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,7 +19,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-        platforms: all
+        with:
+          platforms: all
       - run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
