--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,6 +21,8 @@ jobs:
         uses: docker/setup-qemu-action@v2
         with:
           platforms: all
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
