--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,26 +15,38 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform:
+          [linux/amd64, linux/arm64, linux/386, linux/arm/v7, linux/arm/v6]
     steps:
       - uses: actions/checkout@v3
+
+      # We need to set up QEMU and Docker Buildx to build multi-architecture images
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
         with:
           platforms: all
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      # Install Poetry and install dependencies
       - run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
           cache: "poetry"
       - run: poetry install
+
+      # Run tests
       - run: poetry run pytest
       - uses: docker/login-action@v2
         if: github.event_name != 'pull_request'
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # Build and push Docker image
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v4
@@ -46,7 +58,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6
+          platforms: ${{ matrix.platform }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
