--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,8 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform:
-          [linux/amd64, linux/arm64, linux/386, linux/arm/v7, linux/arm/v6]
+        platform: [linux/amd64, linux/arm64, linux/arm/v7, linux/arm/v6]
     steps:
       - uses: actions/checkout@v3
 
