--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,9 +16,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        platform: [linux/amd64, linux/arm64]
     steps:
+      # Checkout the repository
       - uses: actions/checkout@v3
 
       # We need to set up QEMU and Docker Buildx to build multi-architecture images
@@ -57,7 +56,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64, linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
