--- a/.env.example
+++ b/.env.example
@@ -83,7 +83,7 @@ TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 # NO_EMBED=True
 
 # Show the date and time of the tweet in the footer.
-# SHOW_TIMESTAMP=True
+# SHOW_TIMESTAMP=False
 
 # Don't convert t.co-urls to real urls.
 # Disabled: https://t.co/1YC2hc8iUq
