Revert to using author instead of embed title as default & add settings

--- a/.env.example
+++ b/.env.example
@@ -85,6 +85,12 @@ TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 # Show the date and time of the tweet in the footer.
 # SHOW_TIMESTAMP=False
 
+# Set the embed title to the tweet authors name.
+# USE_TITLE=True
+
+# Set the webhook embed author to the tweet authors name.
+# USE_AUTHOR=False
+
 # Don't convert t.co-urls to real urls.
 # Disabled: https://t.co/1YC2hc8iUq
 # Enabled: https://www.youtube.com/
