You can now make the text a clickable link when using NO_EMBED

--- a/.env.example
+++ b/.env.example
@@ -82,6 +82,21 @@ TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 # Send a normal text message instead on an embed. Images won't work if you uncomment this.
 # NO_EMBED=True
 
+# Make text message a link to something. Default is the tweet.
+# You can modify the URL with MAKE_TEXT_LINK_URL.
+# This will only work if NO_EMBED=True
+# MAKE_TEXT_LINK=True
+
+# Embed Twitter links in the text message? This defaults to False.
+# Look at the images below to see the difference.
+# MAKE_TEXT_LINK_TWITTER_EMBED=True
+
+# Custom URL for MAKE_TEXT_LINK
+# Add < > around the URL to remove embeding of the URL.
+# Without < >: https://support.discord.com/hc/en-us/article_attachments/215494108/sansbrackets.png
+# With < >: https://support.discord.com/hc/en-us/article_attachments/215531027/conbrackets.png
+# MAKE_TEXT_LINK_URL=
+
 # Show the date and time of the tweet in the footer.
 # SHOW_TIMESTAMP=False
 
