You can now choose to only link to the tweet instead of using embed

--- a/.env.example
+++ b/.env.example
@@ -79,6 +79,9 @@ TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 # Needs to be a URL.
 # WEBHOOK_FOOTER_ICON=https://avatars.githubusercontent.com/u/4153203
 
+# Only send a link to the tweet instead of using an embed.
+# ONLY_LINK=True
+
 # Send a normal text message instead on an embed. Images won't work if you uncomment this.
 # NO_EMBED=True
 
