Added random color configuration option to Dockerfile

--- a/.env.example
+++ b/.env.example
@@ -160,3 +160,6 @@ TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 # Disabled: Save 30% on UNCHARTED™: Legacy of Thieves Collection!
 # Enabled: Save 30% on UNCHARTED: Legacy of Thieves Collection!
 # DISABLE_REMOVE_COPYRIGHT_SYMBOLS=True
+
+# Use random colors for webhook embed
+# RANDOM_EMBED_COLORS=True
