Rename new RANDOM_EMBED_COLORS to RANDOMIZE_EMBED_COLOR

--- a/.env.example
+++ b/.env.example
@@ -79,6 +79,9 @@ TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 # Needs to be a URL.
 # WEBHOOK_FOOTER_ICON=https://avatars.githubusercontent.com/u/4153203
 
+# If the embed should be a random color each time it's sent to Discord.
+# RANDOMIZE_EMBED_COLOR=True
+
 # Only send a link to the tweet instead of using an embed.
 # ONLY_LINK=True
 
