You can now append images when only using text

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,12 @@ TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 # This is currently the only way to get videos to work directly in Discord.
 # ONLY_LINK=True
 
+# If we should disable link preview for the tweet. This will add < > around the link.
+# ONLY_LINK_PREVIEW=False
+
+# Append links after the tweet text. This will only work if ONLY_LINK or NO_EMBED is True.
+# APPEND_IMAGE_LINKS =True
+
 # The name in the embed, not the user who sent it, normally this is the tweeter name.
 # WEBHOOK_AUTHOR_NAME=TheLovinator
 
