You can now upload images directly to Discord with UPLOAD_IMAGES=True

--- a/.env.example
+++ b/.env.example
@@ -66,7 +66,12 @@ TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 # ONLY_LINK_PREVIEW=False
 
 # Append links after the tweet text. This will only work if ONLY_LINK or NO_EMBED is True.
+# Same as below but we link to the images instead of uploading them to Discord.
 # APPEND_IMAGE_LINKS =True
+
+# Append images after the tweet text. This will only work if ONLY_LINK or NO_EMBED is True.
+# Same as above but we upload the images to Discord instead of linking to them.
+# UPLOAD_IMAGES=True
 
 # The name in the embed, not the user who sent it, normally this is the tweeter name.
 # WEBHOOK_AUTHOR_NAME=TheLovinator
