You can now append the username with APPEND_USERNAME

--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,9 @@ LOG_LEVEL=INFO
 # If we should disable link preview for the tweet. This will add < > around the link.
 # ONLY_LINK_PREVIEW=False
 
+# Add @username after the tweet text. This will only work if ONLY_LINK or NO_EMBED is True. 
+# APPEND_USERNAME=True
+
 # Append links after the tweet text. This will only work if ONLY_LINK or NO_EMBED is True.
 # Same as below but we link to the images instead of uploading them to Discord.
 # APPEND_IMAGE_LINKS=True
