--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ requests = "^2.28.2"
 python-dotenv = "^1.0.0"
 beautifulsoup4 = "^4.11.2"
 discord-webhook = "^1.1.0"
-tweepy = { extras = ["async"], version = "^4.13.0" }
+tweepy = "^4.13.0"
 loguru = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
