--- a/.env.example
+++ b/.env.example
@@ -98,19 +98,19 @@ ERROR_WEBHOOK=https://discord.com/api/webhooks/123456789012345678/abcdefghijklmn
 
 # Show the tweet author as the author in the embed.
 # Default is True.
-# SHOW_AUTHOR=True
+# SHOW_AUTHOR=False
 
 # Convert t.co-urls to real urls.
 # True: Check this out! https://youtube.com
 # False: Check this out! https://t.co/1YC2hc8iUq
 # Default is True.
-# CONVERT_TCO_LINKS=True
+# CONVERT_TCO_LINKS=False
 
 # Convert &gt; &lt; &amp; to > < & in the tweet text.
 # True: Hello > World < & Hello
 # False: Hello &gt; World &lt; &amp; Hello
 # Default is True.
-# UNESCAPE_TEXT=True
+# UNESCAPE_TEXT=False
 
 # Convert @username to a clickable link.
 # Default is True.
