Fix environment variables not working and change default footer
Fixes #85

--- a/.env.example
+++ b/.env.example
@@ -65,12 +65,12 @@ ERROR_WEBHOOK=https://discord.com/api/webhooks/123456789012345678/abcdefghijklmn
 # EMBED_THUMBNAIL=https://avatars.githubusercontent.com/u/4153203
 
 # Footer text. This is the text that shows up at the bottom of the embed. 
-# Default is not used.
+# Default is "Twitter".
 # EMBED_FOOTER_TEXT=Hello!
 
 # Add an icon to the footer. 
 # You need to set EMBED_FOOTER_TEXT for this to work.
-# Default is not used. 
+# Default is https://abs.twimg.com/icons/apple-touch-icon-192x192.png
 # EMBED_FOOTER_ICON=https://avatars.githubusercontent.com/u/4153203
 
 # Send tweet text to Discord instead of using an embed or link. 
