--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,21 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python: Flask",
+      "name": "Python: Flask reload",
       "type": "python",
       "request": "launch",
       "module": "flask",
-      "env": { "FLASK_APP": "discord_twitter_webhooks.app.py", "FLASK_DEBUG": "1" },
+      "env": { "FLASK_APP": "discord_twitter_webhooks.main.py", "FLASK_DEBUG": "1" },
+      "args": ["run", "--no-debugger", "--reload"],
+      "jinja": true,
+      "justMyCode": true
+    },
+    {
+      "name": "Python: Flask no reload",
+      "type": "python",
+      "request": "launch",
+      "module": "flask",
+      "env": { "FLASK_APP": "discord_twitter_webhooks.main.py", "FLASK_DEBUG": "1" },
       "args": ["run", "--no-debugger", "--no-reload"],
       "jinja": true,
       "justMyCode": true
