--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ python = "^3.10"
 discord-webhook = "^1.1.0"
 loguru = "^0.6.0"
 reader = "^3.5"
-platformdirs = "^3.2.0"
+apscheduler = "^3.10.1"
 flask = "^2.2.3"
 
 [tool.poetry.dev-dependencies]
