--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ flask = "^2.2.3"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 
+[tool.poetry.group.dev.dependencies]
+djlint = "^1.19.17"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
