--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ keywords = ["bot", "discord", "discord-twitter-webhooks", "tweepy"]
 bot = "discord_twitter_webhooks.main:start"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 discord-webhook = "^1.1.0"
 loguru = "^0.7.0"
 reader = "^3.5"
@@ -28,6 +28,10 @@ pytest = "^7.1.2"
 
 [tool.poetry.group.dev.dependencies]
 djlint = "^1.19.17"
+pre-commit = "^3.2.2"
+pyupgrade = "^3.3.1"
+isort = "^5.12.0"
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -91,14 +95,14 @@ select = [
     "RUF",
 ]
 ignore = [
-    "D100",    # pydocstyle - missing docstring in public module
-    "D101",    # pydocstyle - missing docstring in public class
-    "D102",    # pydocstyle - missing docstring in public method
-    "D103",    # pydocstyle - missing docstring in public function
-    "D104",    # pydocstyle - missing docstring in public package
-    "D105",    # pydocstyle - missing docstring in magic method
-    "D106",    # pydocstyle - missing docstring in public nested class
-    "D107",    # pydocstyle - missing docstring in __init__
+    "D100", # pydocstyle - missing docstring in public module
+    "D101", # pydocstyle - missing docstring in public class
+    "D102", # pydocstyle - missing docstring in public method
+    "D103", # pydocstyle - missing docstring in public function
+    "D104", # pydocstyle - missing docstring in public package
+    "D105", # pydocstyle - missing docstring in magic method
+    "D106", # pydocstyle - missing docstring in public nested class
+    "D107", # pydocstyle - missing docstring in __init__
     "PLE1205", # https://github.com/charliermarsh/ruff/issues/3351
 ]
 
