--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pre-commit = "^3.2.2"
 pyupgrade = "^3.3.1"
 isort = "^5.12.0"
 black = "^23.3.0"
+pytest = "^7.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
