--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,7 @@ repos:
       - id: isort
         args: ["--profile", "black", "--filter-files"]
 
+  # Check if Poetry is configured correctly, and if the lock file is up to date, and if the requirements.txt file is up to date.
   - repo: https://github.com/python-poetry/poetry
     rev: '1.4.0'
     hooks:
@@ -31,6 +32,14 @@ repos:
       - id: poetry-export
         args: ["-f", "requirements.txt", "-o", "requirements.txt", "--without-hashes"]
   
+  # Run Flake8 on all Python files.
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.0.0
+    hooks:
+      - id: flake8
+        args: ["--max-line-length", "120"]
+
+  # Run Pytest before committing.
   - repo: local
     hooks:
     -   id: tests
@@ -38,3 +47,5 @@ repos:
         entry: poetry run pytest
         language: system
         types: [python]
+        pass_filenames: false
+        always_run: true
