--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,12 @@ default_language_version:
   python: python3.11
 
 repos:
+  # Check if this file is valid YAML.
+  - repo: https://github.com/pre-commit/pre-commit
+    rev: v3.2.2
+    hooks:
+    -   id: validate_manifest
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
@@ -21,7 +27,6 @@ repos:
       - id: debug-statements # Check for debugger imports and py37+ `breakpoint()` calls in python source.
       - id: destroyed-symlinks # Check for broken symlinks.
       - id: detect-private-key # Check for private keys.
-      - id: double-quote-string-fixer # Use double quotes consistently.
       - id: end-of-file-fixer # Makes sure files end in a newline and only a newline.
       - id: fix-byte-order-marker # Remove the BOM from files.
       - id: fix-encoding-pragma # Remove the encoding pragma.
@@ -30,14 +35,17 @@ repos:
       - id: mixed-line-ending # Replace line endings with the most common one.
       - id: name-tests-test # Check that test functions are named correctly.
         args: [--pytest-test-first]
-      - id: requirements-txt-fixer # Sort the requirements.txt file.
       - id: trailing-whitespace # Trims trailing whitespace.
+
+      # Not used:
       # - id: detect-aws-credentials
+      # - id: double-quote-string-fixer
       # - id: file-contents-sorter
       # - id: forbid-new-submodules
       # - id: forbid-submodules
       # - id: no-commit-to-branch
       # - id: pretty-format-json
+      # - id: requirements-txt-fixer
 
   # Run Ruff on all Python files. We do this before Black so that Black can
   # format the code that Ruff changes.
@@ -60,6 +68,13 @@ repos:
       - id: isort
         args: ["--profile", "black", "--filter-files"]
 
+  # Run Pyupgrade on all Python files. This will upgrade the code to Python 3.11.
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.3.1
+    hooks:
+    -   id: pyupgrade
+        args: ["--py311-plus"]
+
   # Check if Poetry is configured correctly, and if the lock file is up to date, and if the requirements.txt file is up to date.
   - repo: https://github.com/python-poetry/poetry
     rev: '1.4.0'
@@ -75,6 +90,13 @@ repos:
     hooks:
       - id: flake8
         args: ["--max-line-length", "120"]
+
+  # Add a trailing comma to Python stuff.
+  - repo: https://github.com/asottile/add-trailing-comma
+    rev: v2.4.0
+    hooks:
+    - id: add-trailing-comma
+      args: [--py36-plus]
 
   # Run Pytest before committing.
   - repo: local
