--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,40 +2,87 @@ default_language_version:
   python: python3.11
 
 repos:
-  # Check if this file is valid YAML.
-  - repo: https://github.com/pre-commit/pre-commit
-    rev: v3.2.2
+  # Check if Poetry is configured correctly, and if the lock file is up to date, and if the requirements.txt file is up to date.
+  - repo: https://github.com/python-poetry/poetry
+    rev: "1.4.0"
     hooks:
-    -   id: validate_manifest
+      - id: poetry-check
+        name: Check if Poetry is configured correctly by running `poetry check`
+      - id: poetry-lock
+        name: Check if the poetry.lock file is up to date
+      - id: poetry-export
+        name: Check if the requirements.txt file is up to date
+        args:
+          [
+            "-f",
+            "requirements.txt",
+            "-o",
+            "requirements.txt",
+          ]
+
+  - repo: https://github.com/tox-dev/pyproject-fmt
+    rev: "0.9.2"
+    hooks:
+      - id: pyproject-fmt
+        name: Format pyproject.toml with pyproject-fmt
+
+  # Add a trailing comma to Python stuff.
+  - repo: https://github.com/asottile/add-trailing-comma
+    rev: v2.4.0
+    hooks:
+      - id: add-trailing-comma
+        args: [--py36-plus]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
-      - id: check-added-large-files # Prevent large files from being committed. Default limit is 500 kB.
-      - id: check-ast # Simply check whether files parse as valid python.
-      - id: check-builtin-literals # Require literal syntax when initializing empty or zero Python builtin types.
-      - id: check-case-conflict # Check for files that would conflict in case-insensitive filesystems.
-      - id: check-docstring-first # Check that the docstring is the first thing in the file.
-      - id: check-executables-have-shebangs # Check that executables have shebangs.
-      - id: check-json # Check JSON files for syntax errors.
-      - id: check-merge-conflict # Check for files that contain merge conflict strings.
-      - id: check-symlinks # Check for broken symlinks.
-      - id: check-toml # Check TOML files for syntax errors.
-      - id: check-vcs-permalinks # Check for VCS control files that contain permalinks.
-      - id: check-xml # Check XML files for syntax errors.
-      - id: check-yaml # Check YAML files for syntax errors.
-      - id: debug-statements # Check for debugger imports and py37+ `breakpoint()` calls in python source.
-      - id: destroyed-symlinks # Check for broken symlinks.
-      - id: detect-private-key # Check for private keys.
-      - id: end-of-file-fixer # Makes sure files end in a newline and only a newline.
-      - id: fix-byte-order-marker # Remove the BOM from files.
-      - id: fix-encoding-pragma # Remove the encoding pragma.
+      - id: check-added-large-files
+        name: Prevent adding large files to the repository (500 Kb)
+      - id: check-ast
+        name: Check for syntax errors
+      - id: check-builtin-literals
+        name: Require literal syntax when initializing empty or zero Python builtin types.
+      - id: check-case-conflict
+        name: Check for files that would conflict in case-insensitive filesystems.
+      - id: check-docstring-first
+        name: Check that the docstring is the first statement in a module, function, class, or method definition.
+      - id: check-executables-have-shebangs
+        name: Check that executables have shebangs.
+      - id: check-json
+        name: Check JSON files for syntax errors.
+      - id: check-merge-conflict
+        name: Check for files that contain merge conflict strings.
+      - id: check-symlinks
+        name: Check for broken symlinks.
+      - id: check-toml
+        name: Check TOML files for syntax errors.
+      - id: check-vcs-permalinks
+        name: Check for VCS permalinks.
+      - id: check-xml
+        name: Check XML files for syntax errors.
+      - id: check-yaml
+        name: Check YAML files for syntax errors.
+      - id: debug-statements
+        name: Check for debugger imports and py37+ `breakpoint()` calls in Python code.
+      - id: destroyed-symlinks
+        name: Check for destroyed symlinks.
+      - id: detect-private-key
+        name: Check for private keys.
+      - id: end-of-file-fixer
+        name: Ensure that a file is either empty, or ends with one newline.
+      - id: fix-byte-order-marker
+        name: Remove the byte-order marker (BOM) from files.
+      - id: fix-encoding-pragma
+        name: Remove the encoding pragma from Python files.
         args: [--remove]
-      - id: mixed-line-ending # Check for files with mixed line endings.
-      - id: mixed-line-ending # Replace line endings with the most common one.
-      - id: name-tests-test # Check that test functions are named correctly.
+      - id: mixed-line-ending
+        name: Check for files with mixed line endings and replace them with the most common line ending.
+      - id: name-tests-test
+        name: Check that test functions are named test_*.
         args: [--pytest-test-first]
-      - id: trailing-whitespace # Trims trailing whitespace.
+      - id: trailing-whitespace
+        name: Check for trailing whitespace.
+        args: [--markdown-linebreak-ext=md]
 
       # Not used:
       # - id: detect-aws-credentials
@@ -50,9 +97,10 @@ repos:
   # Run Ruff on all Python files. We do this before Black so that Black can
   # format the code that Ruff changes.
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.262'
+    rev: "v0.0.262"
     hooks:
       - id: ruff
+        name: Lint Python code with Ruff
         args: ["--fix", "--exit-non-zero-on-fix"]
 
   # Run Black on all Python files. This will format the code.
@@ -60,49 +108,37 @@ repos:
     rev: 23.3.0
     hooks:
       - id: black
+        name: Format Python code with Black
 
   # Sort Python imports using isort.
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
       - id: isort
+        name: Sort Python imports with isort
         args: ["--profile", "black", "--filter-files"]
 
   # Run Pyupgrade on all Python files. This will upgrade the code to Python 3.11.
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
-    -   id: pyupgrade
+      - id: pyupgrade
+        name: Upgrade Python syntax to Python 3.11 with pyupgrade
         args: ["--py311-plus"]
-
-  # Check if Poetry is configured correctly, and if the lock file is up to date, and if the requirements.txt file is up to date.
-  - repo: https://github.com/python-poetry/poetry
-    rev: '1.4.0'
-    hooks:
-      - id: poetry-check
-      - id: poetry-lock
-      - id: poetry-export
-        args: ["-f", "requirements.txt", "-o", "requirements.txt", "--without-hashes"]
 
   # Run Flake8 on all Python files.
   - repo: https://github.com/pycqa/flake8
     rev: 6.0.0
     hooks:
       - id: flake8
+        name: Lint Python code with Flake8
         args: ["--max-line-length", "120"]
-
-  # Add a trailing comma to Python stuff.
-  - repo: https://github.com/asottile/add-trailing-comma
-    rev: v2.4.0
-    hooks:
-    - id: add-trailing-comma
-      args: [--py36-plus]
 
   # Run Pytest before committing.
   - repo: local
     hooks:
-    -   id: tests
-        name: run tests
+      - id: tests
+        name: Test Python code with Pytest
         entry: poetry run pytest
         language: system
         types: [python]
