--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,10 @@ black = "^23.3.0"
 pytest = "^7.3.1"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+requires = [
+  "poetry-core>=1",
+]
 
 [tool.isort]
 profile = "black"
