Exclude HTML when checking for trailing whitespace

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -83,6 +83,8 @@ repos:
       - id: trailing-whitespace
         name: Check for trailing whitespace.
         args: [--markdown-linebreak-ext=md]
+        exclude_types:
+          - "html"
 
       # Not used:
       # - id: detect-aws-credentials
