--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,11 @@ discord-webhook = "^1.1.0"
 loguru = "^0.7.0"
 reader = "^3.5"
 apscheduler = "^3.10.1"
-flask = "^2.2.3"
+fastapi = "^0.95.1"
+jinja2 = "^3.1.2"
+python-multipart = "^0.0.6"
+uvicorn = "^0.21.1"
+httpx = "^0.24.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
