--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,4 +124,5 @@ addopts = "-vvvvvv --exitfirst"
 filterwarnings = [
     "ignore:'imghdr' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
     "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
+    "ignore: No parser was explicitly specified, so I'm using the best available HTML parser for this system",
 ]
