--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,17 @@ default_language_version:
   python: python3.11
 
 repos:
+  # Update Poetry to the latest version.
+  - repo: local
+    hooks:
+      - id: poetry-self-update
+        name: Update Poetry to the latest version
+        entry: poetry self update
+        language: system
+        types: [python]
+        pass_filenames: false
+        always_run: true
+
   # Check if Poetry is configured correctly, and if the lock file is up to date, and if the requirements.txt file is up to date.
   - repo: https://github.com/python-poetry/poetry
     rev: "1.4.0"
