--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,6 +112,7 @@ ignore = [
     "D107",    # pydocstyle - missing docstring in __init__
     "PLE1205", # https://github.com/charliermarsh/ruff/issues/3351
     "FBT001",  # Boolean positional arg in function definition
+    "FBT002",  # Boolean default value in function definition
     "FBT003",  # Allow positional boolean values in function calls
 ]
 
@@ -119,7 +120,7 @@ ignore = [
 convention = "google"
 
 [tool.ruff.per-file-ignores]
-"tests/*" = ["S101"]
+"tests/*" = ["S101", "SIM114"]
 
 [tool.pytest.ini_options]
 addopts = "-vvvvvv --exitfirst"
@@ -127,4 +128,5 @@ filterwarnings = [
     "ignore:'imghdr' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
     "ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
     "ignore: No parser was explicitly specified, so I'm using the best available HTML parser for this system",
+    "ignore: pkg_resources is deprecated as an API:DeprecationWarning",
 ]
