--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ jinja2 = "^3.1.2"
 python-multipart = "^0.0.6"
 uvicorn = "^0.21.1"
 httpx = "^0.24.0"
+lxml = "^4.9.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
