--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ uvicorn = "^0.21.1"
 httpx = "^0.24.0"
 lxml = "^4.9.2"
 defusedxml = "^0.7.1"
+deepl = "^1.15.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
