Use a max age when choosing if the tweet should be sent

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pydantic = "2.0.3"
 pre-commit = "^3.2.2"
 black = "^23.7.0"
 pytest = "^7.3.1"
+djlint = "^1.32.1"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -101,18 +102,18 @@ select = [
     "RUF",
 ]
 ignore = [
-    "D100", # pydocstyle - missing docstring in public module
-    "D101", # pydocstyle - missing docstring in public class
-    "D102", # pydocstyle - missing docstring in public method
-    "D103", # pydocstyle - missing docstring in public function
-    "D104", # pydocstyle - missing docstring in public package
-    "D105", # pydocstyle - missing docstring in magic method
-    "D106", # pydocstyle - missing docstring in public nested class
-    "D107", # pydocstyle - missing docstring in __init__
+    "D100",    # pydocstyle - missing docstring in public module
+    "D101",    # pydocstyle - missing docstring in public class
+    "D102",    # pydocstyle - missing docstring in public method
+    "D103",    # pydocstyle - missing docstring in public function
+    "D104",    # pydocstyle - missing docstring in public package
+    "D105",    # pydocstyle - missing docstring in magic method
+    "D106",    # pydocstyle - missing docstring in public nested class
+    "D107",    # pydocstyle - missing docstring in __init__
     "PLE1205", # https://github.com/charliermarsh/ruff/issues/3351
-    "FBT001", # Boolean positional arg in function definition
-    "FBT002", # Boolean default value in function definition
-    "FBT003", # Allow positional boolean values in function calls
+    "FBT001",  # Boolean positional arg in function definition
+    "FBT002",  # Boolean default value in function definition
+    "FBT003",  # Allow positional boolean values in function calls
 ]
 
 [tool.ruff.pydocstyle]
@@ -132,4 +133,6 @@ filterwarnings = [
 
 [tool.djlint]
 profile = "jinja"
-ignore = "H023"   # Firefox makes emojis if we use the unicode version(©️ vs &copy;)
+ignore = "H023"                       # Firefox makes emojis if we use the unicode version(©️ vs &copy;)
+format_attribute_template_tags = true
+max_attribute_length = 120
